# moai-dev

./: .gitattributes  .gitignore  .travis.yml  README.md  appveyor.yml
3rdparty-android/adcolony-2.3.4/: classpath.xml  manifest_permissions.xml
3rdparty-android/adcolony-3.2.1/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/adcolony-4.1.0/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/admob/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/amazon-ads/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/amazon-billing-v2/: manifest_declarations.xml
3rdparty-android/amazon-gamecircle/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/applovin-7.3.1/: classpath.xml  manifest_permissions.xml
3rdparty-android/applovin-7.3.2/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/applovin-9.9.2/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/chartboost-6.4.1/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/chartboost-7.5.0/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/crittercism-5.5.5/: manifest_permissions.xml
3rdparty-android/facebook-4.5.1/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/flurry-3.3.4/: manifest_declarations.xml
3rdparty-android/fortumo-9.0.21/: manifest_declarations.xml
3rdparty-android/google-play-services-8.4.0/: manifest_declarations.xml
3rdparty-android/google-play-services-r29/: classpath.xml
3rdparty-android/heyzap-9.13.3/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/heyzap-9.4.4/: manifest_declarations.xml
3rdparty-android/heyzap-9.4.5/: classpath.xml
3rdparty-android/obb-downloader/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/revmob-10.0.0/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/revmob-9.0.8/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/startapp-3.3.2/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/startapp-3.6.6/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/tapjoy-9.1.5/: manifest_declarations.xml
3rdparty-android/twitter4j-4.0.4/: manifest_declarations.xml
3rdparty-android/vungle-3.3.4/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/vungle-6.3.17/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/vungle-6.4.11/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-ios/chartboost-6.4.2/: CHANGELOG.md  README.md
3rdparty-ios/chartboost-7.0.1/: CHANGELOG.md
ant/: libmoai-build.sh  libmoai-clean.sh
ant/libmoai/: .gitignore
cmake/: CMakeLists.txt
cmake/cmake-modules/: module-config.cmake  module-setup.cmake  platform-osx.cmake  platform-windows.cmake
cmake/libmoai/: CMakeLists.txt
cmake/libmoai/config/: moai_config.h.in
cmake/libmoai/moai-fmod-studio/: CMakeLists.txt
cmake/libmoai/moai-luaext/: CMakeLists.txt
cmake/libmoai/moai-sdl/: CMakeLists.txt
cmake/libmoai/moai-sim/: CMakeLists.txt
cmake/libmoai/moai-spine/: CMakeLists.txt
cmake/libmoai/moai-untz/: CMakeLists.txt
cmake/libmoai/moai-util/: CMakeLists.txt
cmake/libmoai/zlcore/: CMakeLists.txt
samples/android-adcolony/: main.lua
samples/android-admob/: main.lua
samples/android-amazonads/: main.lua
samples/android-applovin/: main.lua
samples/android-billing-amazon/: main.lua
samples/android-chartboost/: main.lua
samples/android-facebook/: main.lua
samples/android-gamecircle/: main.lua
samples/android-heyzap/: main.lua
samples/android-play-services/: main.lua
samples/android-revmob/: main.lua
samples/android-startapp/: main.lua
samples/android-twitter/: main.lua
samples/android-vungle/: main.lua
samples/image-loadDual/: main.lua
samples/ios-adcolony/: main.lua
samples/ios-admob/: main.lua
samples/ios-applovin/: main.lua
util/: moaiutil  moaiutil.lua  util.lua
(+324 files in other folders)
